Add frontend directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
+# Python
 *.pyc
 __pycache__/
+
+# Django
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
 db.sqlite3
-.env
+media
+
+# Node
+node_modules/
+build/
